// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayComponent should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  fill: #0f0f17;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-15 path {
  fill: #0f0f17;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-20 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-27 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-29 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-29:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-30 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-31 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-31:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-32 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-33 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-33:hover {
  border-radius: 100%;
  background: false;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-35 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-35:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-86 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-92 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-92>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-93 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-93:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-93:hover:not(:disabled) {
  background-color: #e7eefe;
}

.emotion-93:active:not(:disabled) {
  background-color: #d0defd;
}

.emotion-93:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-93:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-95 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-96 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-96:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-96:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-96:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-96:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-96:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  fill: #0f0f17;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-15 path {
  fill: #0f0f17;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-20 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-27 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-29 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-29:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-30 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-31 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-31:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-32 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-33 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-33:hover {
  border-radius: 100%;
  background: false;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-35 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-35:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-86 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-92 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-92>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-93 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-93:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-93:hover:not(:disabled) {
  background-color: #e7eefe;
}

.emotion-93:active:not(:disabled) {
  background-color: #d0defd;
}

.emotion-93:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-93:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-95 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-96 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-96:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-96:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-96:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-96:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-96:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <button
                    class="emotion-10"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span
                        class="emotion-12"
                      >
                        November
                         
                        2020
                      </span>
                      <span
                        class="emotion-13"
                      >
                        <span
                          class="emotion-6"
                        >
                          <span
                            class="emotion-15"
                          />
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="emotion-16"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-19"
          >
            <div
              class="emotion-20"
            >
              Mo
            </div>
            <div
              class="emotion-20"
            >
              Tu
            </div>
            <div
              class="emotion-20"
            >
              We
            </div>
            <div
              class="emotion-20"
            >
              Th
            </div>
            <div
              class="emotion-20"
            >
              Fr
            </div>
            <div
              class="emotion-20"
            >
              Sa
            </div>
            <div
              class="emotion-20"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-27"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-28"
                  >
                    <div
                      class="emotion-29"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-30"
                  >
                    <div
                      class="emotion-31"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-32"
                  >
                    <div
                      class="emotion-33"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <div
                      class="emotion-35"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
                <td
                  class="emotion-86"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="emotion-92"
      >
        <button
          class="emotion-93"
          data-testid="button"
          type="button"
        >
          <span
            class="emotion-11"
          >
            <span
              class="emotion-95"
            >
              Cancel
            </span>
          </span>
        </button>
        <button
          class="emotion-96"
          data-testid="button"
          type="button"
        >
          <span
            class="emotion-11"
          >
            <span
              class="emotion-95"
            >
              Apply
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverlayComponent should render datepicker correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-11 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-20 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-20:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-21 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-22 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-22:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-23 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-23:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-24 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-24:hover {
  border-radius: 100%;
  background: false;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-26 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-26:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-77 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-87 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-132 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-132:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-165 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-165>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-166 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-166:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-166:hover:not(:disabled) {
  background-color: #e7eefe;
}

.emotion-166:active:not(:disabled) {
  background-color: #d0defd;
}

.emotion-166:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-166:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-167 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-168 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-169 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-169:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-169:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-169:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-169:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-169:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-11 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-20 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-20:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-21 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-22 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-22:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-23 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-23:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-24 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-24:hover {
  border-radius: 100%;
  background: false;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-26 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-26:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-77 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-87 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-132 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-132:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-165 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-165>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-166 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-166:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-166:hover:not(:disabled) {
  background-color: #e7eefe;
}

.emotion-166:active:not(:disabled) {
  background-color: #d0defd;
}

.emotion-166:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-166:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-167 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-168 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-169 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-169:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-169:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-169:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-169:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-169:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div>
                    November
                     
                    2020
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-21"
                  >
                    <div
                      class="emotion-22"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-23"
                  >
                    <div
                      class="emotion-24"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div>
                    December
                     
                    2020
                  </div>
                </div>
              </div>
              <div
                class="emotion-87"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  class="emotion-77"
                />
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      1
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      6
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      8
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      13
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      15
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                  >
                    <div
                      class="emotion-26"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-132"
                  >
                    <div
                      class="emotion-24"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      20
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      22
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      27
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      29
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      31
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
                <td
                  class="emotion-77"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="emotion-165"
      >
        <button
          class="emotion-166"
          data-testid="button"
          type="button"
        >
          <span
            class="emotion-167"
          >
            <span
              class="emotion-168"
            >
              Cancel
            </span>
          </span>
        </button>
        <button
          class="emotion-169"
          data-testid="button"
          type="button"
        >
          <span
            class="emotion-167"
          >
            <span
              class="emotion-168"
            >
              Apply
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
